<resources>
    <string name="app_name">Rick and Morty</string>

    <string name="title_name">Name: </string>
    <string name="title_status">Status: </string>
    <string name="title_species">Species: </string>
    <string name="title_gender">Gender: </string>
    <string name="title_location">Location: </string>
    <string name="title_count_episodes">Count episodes: </string>
    <string name="next">next</string>
    <string name="prev">prev</string>
</resources>